--- a/workspace/xdebug.ini
+++ b/workspace/xdebug.ini
@@ -1,11 +1,11 @@
 ; NOTE: The actual debug.so extention is NOT SET HERE but rather (/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini)
 
 xdebug.remote_enable=1
-xdebug.remote_host=docker.for.mac.localhost
+xdebug.remote_host=host.docker.internal
 xdebug.remote_port=9001
 xdebug.remote_autostart=1
 xdebug.remote_connect_back=0
 xdebug.remote_handler=dbgp
 xdebug.max_nesting_level=250
-xdebug.remote_log=”/var/www/xdebug_log/xdebug_docker.log”
+xdebug.remote_log=”xdebug_docker.log”
 
