--- a/caddy/caddy/Caddyfile
+++ b/caddy/caddy/Caddyfile
@@ -17,7 +17,7 @@
     errors /var/log/caddy/error.log
     # Uncomment to enable TLS (HTTPS)
     # Change the first list to listen on port 443 when enabling TLS
-    #tls self_signed
+    tls ivan.c@quantox.com
 
     # To use Lets encrpt tls with a DNS provider uncomment these
     # lines and change the provider as required
